--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <meta name="theme-color" content="#0a0a0b" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="icon" href="/icons/icon-192.png" />
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <title>EnergyCoach</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
   </head>
-  <body class="bg-black text-zinc-100" style="outline: 2px solid red; overflow-x: auto;">
+  <body class="bg-black text-zinc-100 overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
